@@ -24,7 +24,7 @@ import sys, os
 from lib import *
 
 def get():
-    return [
+    List1 = [
 _('''motto of Ailurus
 Give a man a fish and he can eat for a day; but if you teach him how to fish, he'll eat for a lifetime.'''),
 
@@ -370,3 +370,8 @@ NEW_PRIORITY = -19, -18, -17 [...] 18, 19, 20
 '''),
 
 ]
+    if Config.is_Chinese_locale():
+        List1.append(_(r'''View the IP address outside the local network
+w3m -no-cookie -dump www.123cha.com | grep -o '[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}'
+'''))
+    return List1
